--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon | SEO | Home</title>
 </head>
-<!-- I'll be taking  over for now -->
+<!-- Semantic HTML elements added, also updated the CSS that is linked to it. -->
 <body>
-    <!-- changing this to header breaks the code -->
-    <!-- to fix this, we need to also apply the  necessary changes to CSS -->
     
-    <!-- change all div to semantic elements -->
+
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <!-- what do you think is the best semantic element to use -->
+         
         <nav>
             <ul>
                 <li>
@@ -76,8 +74,9 @@
             </p>
         </article>
     </aside>
+    <!-- changed the h2 in the footer to p, also updating the css -->
     <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <p>Made with ❤️️ by Horiseon</p>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
