--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <figure class="hero"></figure>
     <section class="content">
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A picture of a desk with laptop, notebook, pen pot, magnifying glass and a cup off coffee, showcasing a plan."/>
             <h2>Search Engine Optimization</h2>
 
